# Symforce

./: .env  .envrc  .gitignore  CLAUDE.md  symforce_learning_plan.md  symforce_pgo101_comparison.md
lib/nano-pgo/: nano_pgo_demo.ipynb
lib/nano-pgo/pgo101/: bundle_adjustment_fix_summary.md  chapter01_rotation_and_se3_basics.ipynb  chapter02_understanding_g2o_format.ipynb  chapter03_symforce_symbolic_computation.ipynb  chapter04_building_first_pose_graph_optimizer.ipynb  chapter05_jacobian_manual_vs_automatic.ipynb  chapter06_robust_optimization_with_cauchy.ipynb  chapter07_rotation_initialization_chordal.ipynb  chapter08_advanced_topics_loop_closure.ipynb  chapter09_gtsam_comparison.ipynb  chapter10_visual_slam_with_cameras.ipynb  simulation_output.g2o  temp.ipynb
lib/nano-pgo/pgo101/data/: circular_path.g2o  error_test.g2o  large_test.g2o  simple_square.g2o  simulated_slam.g2o
lib/nano-pgo/pgo101/lectures/: chapter01_rotation_and_se3_basics_theory.md  chapter02_understanding_g2o_format_theory.md  chapter03_symforce_symbolic_computation_theory.md  (+7 more)
src/cc_slam_sym/: PRD.md  package.xml  setup.cfg  setup.py
src/cc_slam_sym/cc_slam_sym/: cone_definitions.py  data_structures.py  dummy_publisher_node.py
src/cc_slam_sym/cc_slam_sym/symforce_factors/: __init__.py  cone_color_factor.py
src/cc_slam_sym/config/: slam_config.yaml
src/cc_slam_sym/docs/: architecture_diagram.md  data_structures.md  development_plan.md  dummy_publisher_design.md  gtsam_integration.md  input_topic_structure.md  symforce_integration.md
src/cc_slam_sym/launch/: dummy_publisher_launch.py
